Let rekonq work everytime with uppercase digited urls

BUG:284829